// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Author component does not render without a username 1`] = `
<div>
  <li>
    <a
      aria-label=" Github - opens in new tab"
      class="link"
      href="https://github.com/"
      rel="noopener noreferrer"
      target="_blank"
    >
      <span />
    </a>
  </li>
</div>
`;

exports[`Author component renders correctly 1`] = `
<div>
  <li>
    <a
      aria-label="test-author Github - opens in new tab"
      class="link"
      href="https://github.com/test-author"
      rel="noopener noreferrer"
      target="_blank"
    >
      <span />
    </a>
  </li>
</div>
`;
